--- a/index - Copy.html
+++ b/index - Copy.html
@@ -29,7 +29,7 @@
               <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Other</button>
               <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                 <li><a class="dropdown-item" href="">Tugas 1</a></li>
-                <li><a class="dropdown-item" href="file:///D:/Tugas%202/index.html">Kembali</a></li>
+                <li><a class="dropdown-item" href="file:///D:/Tugas%202/utama.html">Kembali</a></li>
               </ul>
             </div>
           </ul>
