--- a/index.html
+++ b/index.html
@@ -26,26 +26,8 @@
               <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#About">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#experience">Experience</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
-            <div class="btn-group" role="group">
-              <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Other</button>
-              <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                <li><a class="dropdown-item" href="file:///D:/Tugas%202/TUGAS%2001%20HTML.html">Tugas 1</a></li>
-                <li><a class="dropdown-item" href="file:///D:/Tugas%202/index%20-%20Copy.html">Survey</a></li>
-                <li><a class="dropdown-item" href="#geolocation">Posisi Anda</a></li>
-                <li><a class="dropdown-item" href="file:///D:/Tugas%202/Login%20Situs.html">Keluar</a></li>
-              </ul>
-            </div>
           </ul>
         </div>
       </div>
@@ -53,248 +35,45 @@
     <!-- Akhir Navbar -->
 
     <!-- Jumbotron -->
-    <section class="jumbotron text-center">
-      <img src="img/Rijal2.png" alt="M. RIJAL RIZKI" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 text-light">M. Rijal Rizki</h1>
-      <p class="lead text-light">Mahasiswa Universitas Syiah Kuala | Pendidikan Matematika.</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 1440 320">
-        <path
-          fill="#fff"
-          fill-opacity="100"
-          d="M0,96L40,122.7C80,149,160,203,240,197.3C320,192,400,128,480,106.7C560,85,640,107,720,128C800,149,880,171,960,154.7C1040,139,1120,85,1200,85.3C1280,85,1360,139,1400,165.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- Akhir Jumbotron -->
 
-    <!-- About -->
-    <section id="About">
-      <div class="container">
-        <div class="row text-center text-dark mb-4">
-          <div class="col">
-            <h2>About Me (Tentang Saya)</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
-            <p>
-              M. Rijal Rizki adalah Mahasiswa Universitas Syiah Kuala dari Fakultas Kependidikan dan Ilmu Keguruan, Lahir di Tualang Cut, Tanggal 01 September 2003, Tinggal di Desa Aron, Kecamatan Kuta Baro, Kabupaten Aceh Besar. merupakan
-              anak keenam dari tujuh bersaudara.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <p>Riwayat Pendidikan saya mulai SD sampai SMA adalah SD Negeri Lamblang, MTsN 02 Aceh Besar dan MAN 04 Aceh Besar.</p>
-          </div>
-          <div class="col-md-4">
-            <p>MOTTO HIDUP "Masa depan tergantung apa yang kamu lakukan hari ini, Ada beberapa bab yang buruk bukan berarti ceritamu sudah berakhir, Diri ini pantas untuk bahagia"</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 1440 320">
-      <path
-        fill="#3a0577"
-        fill-opacity="100"
-        d="M0,96L40,122.7C80,149,160,203,240,197.3C320,192,400,128,480,106.7C560,85,640,107,720,128C800,149,880,171,960,154.7C1040,139,1120,85,1200,85.3C1280,85,1360,139,1400,165.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-      ></path>
-    </svg>
-
-    <!-- Akhir About -->
-
-    <!--Geolocatin-->
-    <section id="geolocation">
-      <div class="text-center text-light">
-        <h1>Posisi Anda</h1>
-        <p id="location"></p>
-
-        <script>
-          if ('geolocation' in navigator) {
-            navigator.geolocation.getCurrentPosition(function (position) {
-              var latitude = position.coords.latitude;
-              var longitude = position.coords.longitude;
-
-              var locationElement = document.getElementById('location');
-              locationElement.innerHTML = 'Koordinat Lintang: ' + latitude + '<br>Koordinat Bujur: ' + longitude;
-            });
-          } else {
-            var locationElement = document.getElementById('location');
-            locationElement.innerHTML = 'Geolocation tidak didukung oleh browser ini.';
-          }
-        </script>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 1440 320">
-        <path
-          fill="#fff"
-          fill-opacity="100"
-          d="M0,96L40,122.7C80,149,160,203,240,197.3C320,192,400,128,480,106.7C560,85,640,107,720,128C800,149,880,171,960,154.7C1040,139,1120,85,1200,85.3C1280,85,1360,139,1400,165.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-
-    <!--Akhir Geolocatin-->
-
-    <!-- Experience -->
-
-    <style>
-      table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
-      }
-      table,
-      th,
-      td {
-        border-color: #3a0577;
-      }
-      td,
-      th {
-        border: 1px solid #3a0577;
-        text-align: left;
-        padding: 8px;
-      }
-
-      tr:nth-child(even) {
-        background-color: #dddddd;
-      }
-    </style>
-    <section id="experience">
-      <div class="container">
-        <div class="col">
-          <div class="text-center">
-            <h2>
-              My Experience (Pengalaman Saya)
-              <div class="mb-3"></div>
-            </h2>
-          </div>
-        </div>
-      </div>
-
-      <table>
-        <tr>
-          <th>Organisasi</th>
-          <th>Tahun</th>
-          <th>Kegiatan</th>
-        </tr>
-        <tr>
-          <td>OSIM MTsN 02 Aceh Besar</td>
-          <td>2016/2017</td>
-          <td>Aggota Osim Bidang Alumni</td>
-        </tr>
-        <tr>
-          <td>PB-IMKA</td>
-          <td>17 s/d 21 Juni 2016</td>
-          <td>Peserta dalam Kegiatan Kepemimpinan Dasar (LKD) di SDN Buengcala</td>
-        </tr>
-        <tr>
-          <td>PB-IMKA</td>
-          <td>01 s/d 05 Juni 2018</td>
-          <td>Peserta dalam kegiatan Latihan Kepemimpinan dasar (LKD) VIII 2018 di SMPN 1 Kuta Baro</td>
-        </tr>
-        <tr>
-          <td>Himpunan Mahasiswa Mesin</td>
-          <td>29 Oktober 2018</td>
-          <td>Peserta pada Acara Rubber Powered Plane Competitions 2018</td>
-        </tr>
-        <tr>
-          <td>Himmat</td>
-          <td>2023</td>
-          <td>Anggota Himmat Bagian PA (Pengembangan Akademik)</td>
-        </tr>
-        <tr>
-          <td>Himmat(PA)</td>
-          <td>20 Mei 2023</td>
-          <td>Sebagai Ketua Panitia pada Kegiatan Workshop dengan tema "Pelatihan Dasar SPSS"</td>
-        </tr>
-        <tr>
-          <td>Himmat(PA)</td>
-          <td>23 Sepetember 2023</td>
-          <td>Sebagai Penanggung Jawab bidang Konsumsi pada Kegiatan SEMINAR MAHASISWA NASIAONAL DAN INTERNASIONAL dengan tema "Prepare Yourself For Your Future"</td>
-        </tr>
-      </table>
-    </section>
-
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 1440 320">
-      <path
-        fill="#3a0577"
-        fill-opacity="100"
-        d="M0,96L40,122.7C80,149,160,203,240,197.3C320,192,400,128,480,106.7C560,85,640,107,720,128C800,149,880,171,960,154.7C1040,139,1120,85,1200,85.3C1280,85,1360,139,1400,165.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-      ></path>
-    </svg>
-
-    <!-- Akhir Experience-->
-
-    <!-- Projects -->
     <section id="projects">
       <div class="container">
-        <div class="row text-center text-light mb-3">
-          <div class="col">
-            <h2>My Projects (Proyek Saya)</h2>
-          </div>
-        </div>
-        <div class="col-md-12 text-white">
-          <p>Terdapat beberapa proyek yang pernah saya buat yaitu tentang video pembelajaran dan Project Geogebra, Anda dapat mengakses dengan Klik Icon dibawah:</p>
-        </div>
-
         <div class="row">
-          <div class="row text-center"></div>
-          <a href="https://www.youtube.com/@m.rijalrizki500" class="text-light"><img src="Projects/youtube-logo-hd-8.png" alt="M. RIJAL RIZKI" width="150" />M. RIJAL RIZKI</a>
-        </div>
-        <div class="row">
-          <div class="row text-center"></div>
-          <a href="https://www.geogebra.org/u/rijalrizki01" class="text-light"><img src="Projects/Geogebra.png" alt="M. RIJAL RIZKI" width="150" /> M. RIJAL RIZKI</a>
-        </div>
-
-        <div class="col-md-12 text-light">
-          <p>Berikut ini terdapat beberapa video youtube yang dapat anda akses:</p>
-        </div>
-        <div class="row">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <video controls>
-                <source src="1080_60_29.77_Nov042022_01.mp4" type="video/mp4" />
-              </video>
-              <div class="card-body">
-                <p class="card-text">
-                  Project video pembelajaran saya yang dapat anda tonton materi PENGOLAHAN DATA KELAS 4 SEMESTER 2
-                  <a href="https://www.youtube.com/watch?si=0YD3mKgtKz2-0vtq&v=ZPYeoT1RG-A&feature=youtu.be" class="text-dark fw-bold">Klik Disini</a>
-                </p>
-              </div>
-            </div>
+          <div class="col-md-4 mb-3 text-center">
+            <img src="img/Rijal2.png" alt="M. RIJAL RIZKI" width="200" class="rounded-circle img-thumbnail" />
+            <h1 class="display-4 text-light">M. Rijal Rizki</h1>
+            <p class="lead text-light">Mahasiswa Universitas Syiah Kuala | Pendidikan Matematika.</p>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="Projects/Dilatasi.jpeg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">
-                  Project video pembelajaran saya yang dapat anda tonton materi Tutorial Membuat Dilatasi Dengan Geogebra
-                  <a href="https://www.youtube.com/watch?si=i06Govvo_pDwx7Ck&v=dVLJFwORbfE&feature=youtu.be" class="text-dark fw-bold">Klik Disini</a>
-                </p>
+          <div class="col-md-8 mb-3">
+            <form action="file:///D:/Tugas%202/utama.html" method="post">
+              <div class="container">
+                <div class="row text-center mb-3">
+                  <div class="col">
+                    <h2 class="text-light">Sign In</h2>
+                  </div>
+                </div>
+                <div class="row justify-content-center text-light">
+                  <div class="col-md-10">
+                    <form>
+                      <div class="mb-3">
+                        <label for="name" class="form-label">Nama Lengkap</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="name" name="name" />
+                      </div>
+                      <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="Email" name="email" />
+                      </div>
+                      <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="Projects/Trigonometri.webp" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">
-                  Project video pembelajaran saya yang dapat anda tonton MEMBUAT FUNGSI TRIGONOMETRI PADA TANGEN MENGGUNKAN APLIKASI GEOGREBA <a href="https://www.youtube.com/watch?v=gnAuf-K_FZ4" class="text-dark fw-bold">Klik Disini</a>
-                </p>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
-
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 1440 320">
-        <path
-          fill="#fff"
-          fill-opacity="100"
-          d="M0,96L40,122.7C80,149,160,203,240,197.3C320,192,400,128,480,106.7C560,85,640,107,720,128C800,149,880,171,960,154.7C1040,139,1120,85,1200,85.3C1280,85,1360,139,1400,165.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 60"><path fill="#273036" fill-opacity="1" d="M0,64L0,64L1440,64L1440,0L0,0L0,0Z"></path></svg>
     </section>
-    <!-- Akhir Projects -->
-
     <!-- Contact -->
 
     <section id="contact">
@@ -309,7 +88,7 @@
             <div class="col-md-6">
               <form>
                 <div class="mb-3">
-                  <label for="name" class="form-label">Nama Lengkap</label>
+                  <label for="name" class="form-label">Nama Lengkap </label>
                   <input type="text" class="form-control" id="name" aria-describedby="name" name="name" />
                 </div>
                 <div class="mb-3">
@@ -326,13 +105,7 @@
           </div>
         </div>
       </form>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 1440 320">
-        <path
-          fill="#3a0577"
-          fill-opacity="100"
-          d="M0,96L40,122.7C80,149,160,203,240,197.3C320,192,400,128,480,106.7C560,85,640,107,720,128C800,149,880,171,960,154.7C1040,139,1120,85,1200,85.3C1280,85,1360,139,1400,165.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 1440 100"></svg>
     </section>
     <!-- Akhir contack -->
 
