--- a/utama.html
+++ b/utama.html
@@ -86,7 +86,7 @@
             <p>Riwayat Pendidikan saya mulai SD sampai SMA adalah SD Negeri Lamblang, MTsN 02 Aceh Besar dan MAN 04 Aceh Besar.</p>
           </div>
           <div class="col-md-4">
-            <p>MOTTO HIDUP "Masa depan tergantung apa yang kamu lakukan hari ini, Ada beberapa bab yang buruk bukan berarti ceritamu sudah berakhir, Diri ini pantas untuk bahagia"</p>
+            <p>MOTTO HIDUP "laosajashjksajhvajkasjgcavjhsajhsavjhav"</p>
           </div>
         </div>
       </div>
