--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="lead text-light">Mahasiswa Universitas Syiah Kuala | Pendidikan Matematika.</p>
           </div>
           <div class="col-md-8 mb-3">
-            <form action="utama.html" method="post">
+            <form action="beranda.html" method="post">
               <div class="container">
                 <div class="row text-center mb-3">
                   <div class="col">
