--- a/beranda.html
+++ b/beranda.html
@@ -44,7 +44,7 @@
                 <li><a class="dropdown-item" href="TUGAS 1 HTML.html">Tugas 1</a></li>
                 <li><a class="dropdown-item" href="index - Copy.html">Survey</a></li>
                 <li><a class="dropdown-item" href="#geolocation">Posisi Anda</a></li>
-                <li><a class="dropdown-item" href="index.html">Keluar</a></li>
+                <li><a class="dropdown-item" href="login.html">Keluar</a></li>
               </ul>
             </div>
           </ul>
